fixed spacing issues

--- a/src/css/big.css
+++ b/src/css/big.css
@@ -49,6 +49,10 @@
             padding : 0px;
         }
 
+        #small-logo {
+            display : none;
+        }
+
         #app {
             height: 100%;
         }
