--- a/src/css/medium.css
+++ b/src/css/medium.css
@@ -48,6 +48,10 @@
         padding : 0px;
     }
 
+    #small-logo {
+        display : none;
+    }
+
     #app {
         height: 100%;
     }
@@ -133,14 +137,14 @@
     
      .header > #overlay_text > h2 {
         font-family:  "Helvetica Neue", "HelveticaNeue-Light", "Helvetica Neue Light", Helvetica, Arial, "Lucida Grande", sans-serif; 
-        font-size: 2.5em;
+        font-size: 2.3em;
         font-weight: bold;
 
      }
 
      .header > #overlay_text > h4 {
         font-family:  "Helvetica Neue", "HelveticaNeue-Light", "Helvetica Neue Light", Helvetica, Arial, "Lucida Grande", sans-serif; 
-        font-size: 2em;            
+        font-size: 1.8em;            
      }
 
     #overlay {
