--- a/src/css/xtra-small.css
+++ b/src/css/xtra-small.css
@@ -72,10 +72,15 @@ html, body {
             100% {opacity: 1;  top : 50%;}
         }
 
+        #big-logo {
+            display : none;
+        }
+
   .mobile-header{
     background: #B51E3F;
-    padding: 1.5em;
+    padding: 2em 3.5em;
     font-family:  "Helvetica Neue", "HelveticaNeue-Light", "Helvetica Neue Light", Helvetica, Arial, "Lucida Grande", sans-serif; 
+    font-size: 0.85em; 
   }
 
  .mobile-header > span {
@@ -147,7 +152,7 @@ html, body {
 }
 
 .mobile-jumbotron {
-    height: 60%;
+    height: 65%;
     padding: 0.5em 0.5em;
     background: url(../img/Jumbotron_image.jpg) no-repeat; 
     background-position:center;
@@ -189,14 +194,18 @@ html, body {
  }
 
  .header > #overlay_text > h2 {
-    font-size: 2em;
+    font-size: 2.5em;
     overflow-x: hidden;
+    opacity: 0.7;
     overflow-y: hidden;
+    font-family:  "Helvetica Neue", "HelveticaNeue-Light", "Helvetica Neue Light", Helvetica, Arial, "Lucida Grande", sans-serif;
  }
 
  .header > #overlay_text > h4 {
-    font-size: 1em;     
+    font-size: 1.1em;     
     font-weight: bold;    
+    opacity: 0.7;
+    font-family:  "Helvetica Neue", "HelveticaNeue-Light", "Helvetica Neue Light", Helvetica, Arial, "Lucida Grande", sans-serif;
  }
 
 #overlay {
